[gd_scene load_steps=5 format=3 uid="uid://wepmyoliakqm"]

[ext_resource type="Texture2D" uid="uid://fbqb24y317ny" path="res://assets/ui/Green.png" id="1_5h4bw"]
[ext_resource type="Script" path="res://scripts/inicio.gd" id="1_l2yso"]
[ext_resource type="Theme" uid="uid://cany6akrotmf6" path="res://themes/theme.tres" id="2_5333o"]
[ext_resource type="Texture2D" uid="uid://3xj1hu34qmrr" path="res://assets/ui/Purple.png" id="3_gqnad"]

[node name="Inicio" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l2yso")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.588235)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_5h4bw")
stretch_mode = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_5333o")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Titulo" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 70
text = "MÃºsica"
horizontal_alignment = 1

[node name="HBCodigo" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="LabelCodigo" type="Label" parent="Panel/VBoxContainer/HBCodigo"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 40
text = "Codigo : "
horizontal_alignment = 2
vertical_alignment = 1

[node name="Codigo" type="TextEdit" parent="Panel/VBoxContainer/HBCodigo"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 2

[node name="HBNombre" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="LabelNombre" type="Label" parent="Panel/VBoxContainer/HBNombre"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 40
text = "Nombre : "
horizontal_alignment = 2
vertical_alignment = 1

[node name="Nombre" type="TextEdit" parent="Panel/VBoxContainer/HBNombre"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 2

[node name="HBNiveles" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 8.09

[node name="TituloNiveles" type="Label" parent="Panel/VBoxContainer/HBNiveles"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.78
theme_override_font_sizes/font_size = 50
text = "Niveles"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBSelectorNiveles" type="HBoxContainer" parent="Panel/VBoxContainer/HBNiveles"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.78
alignment = 1

[node name="Snivel1" type="VBoxContainer" parent="Panel/VBoxContainer/HBNiveles/HBSelectorNiveles"]
layout_mode = 2

[node name="ButtonLevel1" type="TextureButton" parent="Panel/VBoxContainer/HBNiveles/HBSelectorNiveles/Snivel1"]
modulate = Color(0.180392, 0.521569, 1, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_gqnad")

[node name="Nivel1Label" type="Label" parent="Panel/VBoxContainer/HBNiveles/HBSelectorNiveles/Snivel1"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "  Nivel1  "

[node name="Snivel2" type="VBoxContainer" parent="Panel/VBoxContainer/HBNiveles/HBSelectorNiveles"]
layout_mode = 2

[node name="ButtonLevel2" type="TextureButton" parent="Panel/VBoxContainer/HBNiveles/HBSelectorNiveles/Snivel2"]
modulate = Color(1, 1, 0.384314, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_gqnad")

[node name="Nivel2Label" type="Label" parent="Panel/VBoxContainer/HBNiveles/HBSelectorNiveles/Snivel2"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "  Nivel2  "

[node name="Snivel3" type="VBoxContainer" parent="Panel/VBoxContainer/HBNiveles/HBSelectorNiveles"]
layout_mode = 2

[node name="ButtonLevel3" type="TextureButton" parent="Panel/VBoxContainer/HBNiveles/HBSelectorNiveles/Snivel3"]
modulate = Color(1, 0.380392, 0.203922, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_gqnad")

[node name="Nivel3Label" type="Label" parent="Panel/VBoxContainer/HBNiveles/HBSelectorNiveles/Snivel3"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "  Nivel3  "

[node name="warning" type="Label" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.560784, 0.00784314, 0.176471, 1)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.0431373)
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1

[connection signal="pressed" from="Panel/VBoxContainer/HBNiveles/HBSelectorNiveles/Snivel1/ButtonLevel1" to="." method="_on_button_level_1_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBNiveles/HBSelectorNiveles/Snivel2/ButtonLevel2" to="." method="_on_button_level_2_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBNiveles/HBSelectorNiveles/Snivel3/ButtonLevel3" to="." method="_on_button_level_3_pressed"]
